🔧 chore: add large binary files to gitignore
- 防止 LLVM、7z 等大型安装包被提交

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,9 @@ easytier-gui/src-tauri/*.sys
 # SQLite database files
 et.db*
 **/et.db*
+
+# Large binary installers
+*.exe
+!target/**/*.exe
+LLVM-*.exe
+7z*.exe
