--- a/easytier-gui/package.json
+++ b/easytier-gui/package.json
@@ -26,7 +26,7 @@
     "primevue": "^4.3.9",
     "tauri-plugin-vpnservice-api": "workspace:*",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "~4.4.5"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^3.7.3",
